Add images to cocktail list on index page

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,6 +5,7 @@
     <li>
       <a href="/cocktails/<%= cocktail.id %>">
         <%= cocktail.name %>
+        <img src="<%= cocktail.image_url %>" alt="Cocktail image" width="100" height="100">
       </a>
     </li>
   <% end %>
