Tidy pathing using resource method helpers in index view

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @cocktails.each do |cocktail| %>
     <li>
-      <a href="/cocktails/<%= cocktail.id %>">
+      <a href="<%= cocktail_path(cocktail)%>">
         <%= cocktail.name %>
         <img src="<%= cocktail.image_url %>" alt="Cocktail image" width="100" height="100">
       </a>
