--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,10 +3,8 @@
 <ul>
   <% @cocktails.each do |cocktail| %>
     <li>
-      <a href="<%= cocktail_path(cocktail)%>">
-        <%= cocktail.name %>
-        <img src="<%= cocktail.image_url %>" alt="Cocktail image" width="100" height="100">
-      </a>
+      <%= link_to cocktail.name, cocktail %>
+      <%= link_to image_tag(cocktail.image_url, size: 100), cocktail %>
     </li>
   <% end %>
 </ul>
