Add way of updating cocktail recipes. Changes to controller and views. Change to use of a shared form partial between edit and new requests, instead of individual form builders.

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -4,3 +4,7 @@
 
 <p><%= @cocktail.ingredient %></p>
 <p><%= @cocktail.instruction %></p>
+
+<ul>
+  <li><%= link_to "Edit", edit_cocktail_path(@cocktail) %></li>
+</ul>
