--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,4 +7,8 @@
 
 <ul>
   <li><%= link_to "Edit", edit_cocktail_path(@cocktail) %></li>
+  <li><%= link_to "Destroy", cocktail_path(@cocktail), data: {
+    turbo_method: :delete,
+    turbo_confirm: "Are you sure?"
+  } %></li>
 </ul>
