Fixed problem with models (had model for other tables in single file, instead of individual). Small changes made to show in view to retrieve from new tables

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,6 +5,15 @@
 <p><%= @cocktail.instruction %></p>
 
 <ul>
+  <% @cocktail.ingredients.each do |ingredient| %>
+    <li>
+      <% ingredient.name %>
+      <% ingredient.description %>
+    </li>
+  <% end %>
+</ul>
+
+<ul>
   <li><%= link_to "Edit", edit_cocktail_path(@cocktail) %></li>
   <li><%= link_to "Destroy", cocktail_path(@cocktail), data: {
     turbo_method: :delete,
