Fix controller to add missing attributes to params. Change views to use placeholder instead of labels, and other tidying changes to views

--- a/app/views/cocktails/_cocktail_ingredient_fields.html.erb
+++ b/app/views/cocktails/_cocktail_ingredient_fields.html.erb
@@ -7,17 +7,16 @@
   </div>
 
   <div>
-    <%= f.label :quantity %>
-    <%= f.text_field :quantity %>
+    <%= f.text_field :quantity, placeholder: "Quantity" %>
   </div>
 
   <div>
-    <%= f.label :unit %>
-    <%= f.text_field :unit %>
+    <%= f.text_field :unit, placeholder: "Measurement Unit" %>
   </div>
 
   <div>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, placeholder: "Ingredient Description" %>
   </div>
+
+  <br />
 </div>
