--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -12,17 +12,20 @@
     </div>
   <% end %>
 
-  <%= cocktail_form.text_field :title, placeholder: "Cocktail Name" %>
+  <%= cocktail_form.text_field :name, placeholder: "Cocktail Name" %><br />
+  <br /><%= cocktail_form.text_field :spirit_type, placeholder: "Spirit Type" %><br />
+  <br /><%= cocktail_form.text_field :image_url, placeholder: "Cocktail Image Link" %><br />
+  <br /><%= cocktail_form.text_area :description, placeholder: "Cocktail Description" %><br />
+  <br /><%= cocktail_form.text_area :instruction, placeholder: "Cocktail Instructions" %>
   <h2>Ingredients</h2>
   <div id="cocktailIngredients">
     <%= cocktail_form.fields_for :cocktail_ingredients do |cocktail_ingredient_form| %>
       <%= render "cocktail_ingredient_fields", f: cocktail_ingredient_form %>
     <% end %>
     <div class='links'>
-      <%= link_to_add_association 'add ingredient', cocktail_form, :cocktail_ingredients %>
+      <%= link_to_add_association 'add ingredient', cocktail_form, :cocktail_ingredients, wrap_object: Proc.new { |cocktail_ingredient| cocktail_ingredient.build_ingredient; cocktail_ingredient } %>
     </div>
-  </div>
+  </div><br />
 
-  <br />
   <%= cocktail_form.submit %>
 <% end %>
