Add ability to remove ingredient in view for creating new cocktails

--- a/app/views/cocktails/_cocktail_ingredient_fields.html.erb
+++ b/app/views/cocktails/_cocktail_ingredient_fields.html.erb
@@ -18,5 +18,7 @@
     <%= f.text_field :description, placeholder: "Ingredient Description" %>
   </div>
 
+  <%= link_to_remove_association "remove ingredient", f %><br />
+
   <br />
 </div>
