--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,6 +1,2 @@
 <h1>Edit <%= @cocktail.name %></h1>
-
-<%= form_with model: @cocktail do |form| %>
-  <%= form.text_field :name, placeholder: "Cocktail Name" %>
-  <%= form.submit %>
-<% end %>
+<%= render "form" %>
