--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,31 +1,2 @@
 <h1>New Cocktail</h1>
-
-<%= form_with model: @cocktail do |cocktail_form| %>
-  <% if @cocktail.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@cocktail.errors.count, "error") %> prohibited this recipe from being saved:</h2>
-      <ul>
-        <% @cocktail.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <%= cocktail_form.text_field :name, placeholder: "Cocktail Name" %><br />
-  <br /><%= cocktail_form.text_field :spirit_type, placeholder: "Spirit Type" %><br />
-  <br /><%= cocktail_form.text_field :image_url, placeholder: "Cocktail Image Link" %><br />
-  <br /><%= cocktail_form.text_area :description, placeholder: "Cocktail Description" %><br />
-  <br /><%= cocktail_form.text_area :instruction, placeholder: "Cocktail Instructions" %>
-  <h2>Ingredients</h2>
-  <div id="cocktailIngredients">
-    <%= cocktail_form.fields_for :cocktail_ingredients do |cocktail_ingredient_form| %>
-      <%= render "cocktail_ingredient_fields", f: cocktail_ingredient_form %>
-    <% end %>
-    <div class='links'>
-      <%= link_to_add_association 'add ingredient', cocktail_form, :cocktail_ingredients, wrap_object: Proc.new { |cocktail_ingredient| cocktail_ingredient.build_ingredient; cocktail_ingredient } %>
-    </div>
-  </div><br />
-
-  <%= cocktail_form.submit %>
-<% end %>
+<%= render "form" %>
