Fixed bug, now removing ingredient when editing a cocktail works

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,9 +3,9 @@
 <ul>
   <% @cocktails.each do |cocktail| %>
     <li>
+      <%= link_to image_tag(cocktail.image_url, size: 100), cocktail %><br />
       <%= link_to cocktail.name, cocktail %>
-      <%= link_to image_tag(cocktail.image_url, size: 100), cocktail %>
-    </li>
+    </li><br />
   <% end %>
 </ul>
 
